[package]
name = "raymarcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.20"
winit = { version = "0.30", features = ["rwh_06"] }
env_logger = "0.11"
anyhow = "1.0"
pollster = "0.3.0"
rapid-qoi = "0.6.1"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
